Masami's edits to section 2.3

--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -403,12 +403,12 @@ Consequently, this particular relationship between the mean duration and fractio
 We will refer to this as the "flat age-within-stage structure" (FAS) model.
 
 A rather different approach to estimating $\gamma_i$ does not explicitly attempt to match the mean stage duration, but instead merely estimates $\gamma_i$ as the observed fraction of surviving individuals in the stage that mature to the next stage.
-This requires repeated observations of marked individuals, and might make use of tools such as multistate capture-mark-recapture models [e.g., @Fujiwara2001a].
+This requires repeated observations of marked individuals (capture histories), and might make use of tools such as multistate capture-mark-recapture models [e.g., @Fujiwara2001a].
 As long as the modeled age-within-stage distribution remains the same as it was in the population during the observation period, then the model will get the mean stage duration correct.
-However, whereas the observed fraction maturing will change as the age-within-stage distribution changes in the actual population, changes in the modeled age-within-stage distribution will not be reflected in changing maturation fraction.
+However, estimated $\gamma_i$ may be biased if the age-within-stage distribution changes unless it is estimated accounting for the age within stage of individuals. 
 We will refer to this as the "observed age-within-stage structure" (OAS) model.
 
-As mentioned above, only the AAS model will replicate $\lambda_1$ and its sensitivities from the fully age-structured model.
+Among AAS, SAS, and FAS models, only the AAS model will replicate $\lambda_1$ and its sensitivities from the fully age-structured model.
 Of course, a final approach, if the stage durations really are fixed, is to "unroll" the stage, replacing the single stage class with $T_i$ age classes with identical survival coefficients (or, if the assumption of homogeneous survival within the stage was an approximation, with actual age-specific survival coefficients).
 After analysis, the age classes can be collapsed back to their stage to generate a stage structure or sensitivity analyses that are stage-specific rather than age-specific.
 
